tests/baselines/reference/propertyLookup1.errors.txt
tests/cases/conformance/pedantics/propertyLookup1.ts(24,1): error TS4111: Access property 'foo' by index signature is disallowed.
tests/cases/conformance/pedantics/propertyLookup1.ts(32,1): error TS4111: Access property 'bar' by index signature is disallowed.
tests/cases/conformance/pedantics/propertyLookup1.ts(40,1): error TS4111: Access property 'bar' by index signature is disallowed.


==== tests/cases/conformance/pedantics/propertyLookup1.ts (3 errors) ====
    interface A {
        foo: string
    }
    
    interface B {
        [k: string]: string
    }
    
    interface C {
        foo: string
        [k: string]: string
    }
    
    declare const a: A;
    declare const b: B;
    declare const c: C;
    declare const d: C | undefined;
    
    // access property
    a.foo;
    a["foo"]
    
    // access index signature
    b.foo;
    ~~~~~
!!! error TS4111: Access property 'foo' by index signature is disallowed.
    b["foo"];
    
    // access property
    c.foo;
    c["foo"]
    
    // access index signature
    c.bar;
    ~~~~~
!!! error TS4111: Access property 'bar' by index signature is disallowed.
    c["bar"];
    
    // optional access property
    d?.foo;
    d?.["foo"]
    
    // optional access index signature
    d?.bar;
    ~~~~~~
!!! error TS4111: Access property 'bar' by index signature is disallowed.
    d?.["bar"];
    